# breakout

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/breakout/: audio.hpp  ballobject.hpp  breakout_game.hpp  gamelevel.hpp  gameobject.hpp  input.hpp  keys.hpp  log.hpp  macro.hpp  memory.hpp  particle.hpp  player.hpp  postprocessor.hpp  powerup.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  text_renderer.hpp  texture2d.hpp
res/levels/: five.level
res/shaders/frag/: particle.glsl  post_processing.glsl  sprite.glsl
res/shaders/vert/: particle.glsl  post_processing.glsl  sprite.glsl  text_2d.glsl
src/: CMakeLists.txt  audio.cpp  ballobject.cpp  breakoutgame.cpp  gamelevel.cpp  gameobject.cpp  input.cpp  main.cpp  memory.cpp  particle.cpp  postprocessor.cpp  powerup.cpp  resourcemanager.cpp  shader.cpp  spriterenderer.cpp  textrenderer.cpp  texture2d.cpp
